testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_digit/case11.expect.out
error: expected hexadecimal digit, found '}'
  ==> case11.cj:11:13:
   | 
11 | var a = '\u{}'
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found 'new line character'
  ==> case11.cj:12:13:
   | 
12 | var b = '\u{
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found 'G'
  ==> case11.cj:14:13:
   | 
14 | var c = '\u{G}'
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found 'g'
  ==> case11.cj:15:13:
   | 
15 | var d = '\u{g}'
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found 'Z'
  ==> case11.cj:16:13:
   | 
16 | var e = '\u{Z}'
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found 'z'
  ==> case11.cj:17:13:
   | 
17 | var f = '\u{z}'
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found '-'
  ==> case11.cj:18:13:
   | 
18 | var g = '\u{-1}'
   |             ^ expected hexadecimal digit
   | 

error: expected hexadecimal digit, found '"'
  ==> case11.cj:19:13:
   | 
19 | var h = '\u{"x"}'
   |             ^ expected hexadecimal digit
   | 

8 errors generated, 8 errors printed.
